--- a/app/particles/header.html
+++ b/app/particles/header.html
@@ -3,73 +3,88 @@
 		<div class="header__inner">
 
 			<div class="header__up">
-				<div class="logo">
-					<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
+
+				<div class="header__left">
+					<div class="logo">
+						<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
+					</div>
 				</div>
 
-				<div class="header__burger-wrap">
+				<div class="header__right">
+					<button class="btn btn-discount btn-discount--1" type="button">Запишись со скидкой</button>
+
 					<button class="burger" type="button">
 						<span class="burger__item">menu</span>
 					</button>
-				</div>
 
-				<nav class="nav">
-					<ul class="nav__ul">
+					<nav class="nav">
+						<ul class="nav__ul">
 
-						<li class="nav__li">
-							<a class="nav__link" href="#">Главная</a>
-						</li>
+							<li class="nav__li">
+								<a class="nav__link nav__link--hover-underline" href="#">Главная</a>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link" href="#">Услуги и цены</a>
-						</li>
+							<li class="nav__li">
+								<a class="nav__link nav__link--hover-underline" href="#">Услуги и цены</a>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link" href="#">Условия обучения</a>
-						</li>
+							<li class="nav__li">
+								<a class="nav__link nav__link--hover-underline" href="#">Условия обучения</a>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link" href="#">Условия обучения</a>
-						</li>
+							<li class="nav__li">
+								<a class="nav__link nav__link--hover-underline" href="#">Условия обучения</a>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link nav__link--show-ul" href="#">Фотогалерея</a>
+							<li class="nav__li nav__li--por">
+								<a class="nav__link nav__link--show-ul" href="#">Фотогалерея</a>
 
-							<ul class="nav__ul-in">
-								<li class="nav__li-in">
-									<a class="nav__link-in" href="#">Классы</a>
-								</li>
-								<li class="nav__li-in">
-									<a class="nav__link-in" href="#">Автодром</a>
-								</li>
-							</ul>
+								<ul class="nav__ul-in">
+									<li class="nav__li-in">
+										<a class="nav__link-in" href="#">Классы</a>
+									</li>
+									<li class="nav__li-in">
+										<a class="nav__link-in" href="#">Автодром</a>
+									</li>
+								</ul>
 
-						</li>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link nav__link--show-ul" href="#">Информация</a>
+							<li class="nav__li nav__li--por">
+								<a class="nav__link nav__link--show-ul" href="#">Информация</a>
 
-							<ul class="nav__ul-in">
-								<li class="nav__li-in">
-									<a class="nav__link-in" href="#">Сведения об образовательной организации</a>
-								</li>
-							</ul>
+								<ul class="nav__ul-in">
+									<li class="nav__li-in">
+										<a class="nav__link-in" href="#">Сведения об образовательной организации</a>
+									</li>
+								</ul>
 
-						</li>
+							</li>
 
-						<li class="nav__li">
-							<a class="nav__link" href="#">Контакты</a>
-						</li>
+							<li class="nav__li">
+								<a class="nav__link nav__link--hover-underline" href="#">Контакты</a>
+							</li>
 
-					</ul>
-				</nav>
+						</ul>
+					</nav>
+
+				</div><!-- header__right -->
 
 			</div><!-- header__up -->
 
 			<div class="header__down">
 
+				<button class="btn btn-discount btn-discount--2" type="button">Запишись со скидкой</button>
+
+
 				<div class="tel">
 					<a class="tel__link" href="tel:+78437166727">(84371)6-67-27</a>
+				</div>
+
+				<div class="address">
+					г. Зеленодольск <br>
+					ул. Королева 1а <br>
+					ул. Карла Маркса 48 <br>
 				</div>
 
 			</div><!-- header__down -->
