17:45 сделал фиксированный хедер и прочеее

--- a/app/particles/header.html
+++ b/app/particles/header.html
@@ -7,7 +7,14 @@
 				<div class="header__left">
 					<div class="logo">
 						<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
+						<img class="logo__img logo__img--black" src="img/logo/logo-black.png" alt="logo">
 					</div>
+
+
+				</div>
+
+				<div class="tel tel--black">
+					<a class="tel__link tel__link--black" href="tel:+78437166727">(84371)6-67-27</a>
 				</div>
 
 				<div class="header__right">
@@ -77,8 +84,8 @@
 				<button class="btn btn-discount btn-discount--2" type="button">Запишись со скидкой</button>
 
 
-				<div class="tel">
-					<a class="tel__link" href="tel:+78437166727">(84371)6-67-27</a>
+				<div class="tel tel--white">
+					<a class="tel__link tel__link--white" href="tel:+78437166727">(84371)6-67-27</a>
 				</div>
 
 				<div class="address">
