--- a/app/particles/main/intro.html
+++ b/app/particles/main/intro.html
@@ -1,9 +1,19 @@
 <section class="intro" id="intro">
 	<img class="intro__img" src="img/intro/auto.jpg" alt="auto">
+
 	<div class="container">
 		<div class="intro__inner">
 
+			<div class="intro__content">
+				<h1 class="intro__title">
+					<span class="intro__title--ttu">Акция</span> <br>
+					категория "B"
+				</h1>
+				<p class="intro__p">5 000 в месяц</p>
+				<div class="intro__subtitle">Идет набор на обучение</div>
+			</div>
 
 		</div><!-- /.intro__inner -->
 	</div><!-- /.container -->
+
 </section><!-- /.intro -->
