--- a/app/particles/header.html
+++ b/app/particles/header.html
@@ -6,8 +6,10 @@
 
 				<div class="header__left">
 					<div class="logo">
-						<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
-						<img class="logo__img logo__img--black" src="img/logo/logo-black.png" alt="logo">
+						<a href="#">
+							<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
+							<img class="logo__img logo__img--black" src="img/logo/logo-black.png" alt="logo">
+						</a>
 					</div>
 
 
@@ -98,3 +100,8 @@
 		</div><!-- header__inner -->
 	</div><!-- container -->
 </header>
+
+
+<div class="topscroll">
+	<a class="topscroll__link" href="">➤</a>
+</div>
