18:03 закончил основную работу над хедером и интро

--- a/app/particles/header.html
+++ b/app/particles/header.html
@@ -103,5 +103,5 @@
 
 
 <div class="topscroll">
-	<a class="topscroll__link" href="">➤</a>
+	<button class="btn topscroll__btn" type="button">➤</button>
 </div>
