10:51 сделал третий блок

--- a/app/particles/main.html
+++ b/app/particles/main.html
@@ -9,5 +9,15 @@
 
 
 
+<!-- Services -->
+@@include('main/services.html')
+
+
+
+<!-- Registration -->
+@@include('main/registration.html')
+
+
+
 </main>
 
