--- a/app/particles/main/subintro.html
+++ b/app/particles/main/subintro.html
@@ -1,8 +1,8 @@
-<section class="subintro" id="subintro">
+<section class="subintro section" id="subintro">
 	<div class="container">
 		<div class="subintro__inner">
 
-			<h2 class="subintro__title">Автошкола Фиеста</h2>
+			<h2 class="section__title">Автошкола Фиеста</h2>
 			<img class="subintro__img" src="img/subintro/subintro.jpg" alt="автошкола">
 
 		</div><!-- /.subintro__inner -->
