--- a/app/particles/main/registration.html
+++ b/app/particles/main/registration.html
@@ -2,6 +2,21 @@
 	<div class="container">
 		<div class="registration__inner">
 
+			<h2 class="section__title">Запись на обучение</h2>
+
+			<div class="form">
+				<form action="" class="form__body">
+					<input type="text" name="" id="" placeholder="Введите Ваше имя">
+					<input type="tel" name="" id="" placeholder="+7 900 000 00 00">
+					<button class="btn btn-send" type="submit">Отправить</button>
+					<label for="">
+						<input type="checkbox" name="" id="">
+						Оставляя номер телефона, я соглашаюсь соглашаюсь
+						<a href="#">пользовательским соглашением</a> и
+						<a href="http://" target="_blank" rel="noopener noreferrer"></a>
+					</label>
+				</form>
+			</div>
 
 
 		</div><!-- /.registration__inner -->
