17:03 работа над паралакс блоком

--- a/app/particles/main/registration.html
+++ b/app/particles/main/registration.html
@@ -1,22 +1,25 @@
-<section class="registration" id="registration">
-	<div class="container">
+<section class="registration parallax-window" id="registration" >
+	<div class="container parallax-window" data-parallax="scroll" data-image-src="img/registration/registration-bg.jpg">
 		<div class="registration__inner">
 
-			<h2 class="section__title">Запись на обучение</h2>
+			<h2 class="section__title section__title--white">Запись на обучение</h2>
 
 			<div class="form">
-				<form action="" class="form__body">
-					<input type="text" name="" id="" placeholder="Введите Ваше имя">
-					<input type="tel" name="" id="" placeholder="+7 900 000 00 00">
+				<form class="form__body" action="" >
+
+					<input class="form__input" type="text" name="" id="" placeholder="Введите Ваше имя">
+					<input class="form__input" type="tel" name="" id="" placeholder="+7 900 000 00 00">
 					<button class="btn btn-send" type="submit">Отправить</button>
+
 					<label for="">
-						<input type="checkbox" name="" id="">
-						Оставляя номер телефона, я соглашаюсь соглашаюсь
-						<a href="#">пользовательским соглашением</a> и
-						<a href="http://" target="_blank" rel="noopener noreferrer"></a>
+						<input class="form__input" type="checkbox" name="" id="" checked>
+						Оставляя номер телефона, я соглашаюсь c
+						<a class="form__link" href="#">пользовательским соглашением</a> и
+						<a class="form__link" href="">политикой конфиденциальности</a>
 					</label>
+
 				</form>
-			</div>
+			</div><!-- /.form -->
 
 
 		</div><!-- /.registration__inner -->
