--- a/app/particles/script.html
+++ b/app/particles/script.html
@@ -1,5 +1,5 @@
 <!-- Подключение jQuery -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <!-- Популярный слайдер Slick https://kenwheeler.github.io/slick/-->
 <!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
