12:20 закончил делать предпоследний блок

--- a/app/particles/footer.html
+++ b/app/particles/footer.html
@@ -2,6 +2,21 @@
 	<div class="container">
 		<div class="footer__inner">
 
+			<div class="logo">
+				<a href="#">
+					<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
+					<img class="logo__img logo__img--black" src="img/logo/logo-black.png" alt="logo">
+				</a>
+			</div>
+
+			<div class="tel tel--white">
+				<a class="tel__link tel__link--white" href="tel:+78437166727">(84371)6-67-27</a>
+			</div>
+
+			<div class="copyright">© АВТОШКОЛА ФИЕСТА 2021. Все права защищены.</div>
+
+			<a class="privacy-policy" href="#">Политика обработки персональных данных</a>
+
 		</div><!-- footer__inner -->
 	</div><!-- container -->
 </footer>
