--- a/app/particles/main/registration.html
+++ b/app/particles/main/registration.html
@@ -11,8 +11,10 @@
 					<input class="form__input" type="tel" name="" id="" placeholder="+7 900 000 00 00">
 					<button class="btn btn-send" type="submit">Отправить</button>
 
-					<label for="">
-						<input class="form__input" type="checkbox" name="" id="" checked>
+					<span class="ajax-loader">ajax-loader</span>
+
+					<label class="form__label" for="">
+						<input class="form__checkbox" type="checkbox" name="" id="" checked>
 						Оставляя номер телефона, я соглашаюсь c
 						<a class="form__link" href="#">пользовательским соглашением</a> и
 						<a class="form__link" href="">политикой конфиденциальности</a>
