--- a/app/particles/footer.html
+++ b/app/particles/footer.html
@@ -2,20 +2,24 @@
 	<div class="container">
 		<div class="footer__inner">
 
-			<div class="logo">
-				<a href="#">
-					<img class="logo__img logo__img--white" src="img/logo/logo-white.png" alt="logo">
-					<img class="logo__img logo__img--black" src="img/logo/logo-black.png" alt="logo">
-				</a>
-			</div>
+			<div class="footer__up">
+				<div class="logo">
+					<a href="#">
+						<img class="logo__img logo__img--white logo__img--footer" src="img/logo/logo-white.png" alt="logo">
+					</a>
+				</div>
 
-			<div class="tel tel--white">
-				<a class="tel__link tel__link--white" href="tel:+78437166727">(84371)6-67-27</a>
+				<div class="tel tel--white tel--footer">
+					<a class="tel__link tel__link--white" href="tel:+78437166727">(84371)6-67-27</a>
+				</div>
 			</div>
 
 			<div class="copyright">© АВТОШКОЛА ФИЕСТА 2021. Все права защищены.</div>
 
-			<a class="privacy-policy" href="#">Политика обработки персональных данных</a>
+			<div class="privacy-policy">
+				<a class="privacy-policy__link" href="#">Политика обработки персональных данных</a>
+
+			</div>
 
 		</div><!-- footer__inner -->
 	</div><!-- container -->
