--- a/app/particles/main/registration.html
+++ b/app/particles/main/registration.html
@@ -5,7 +5,7 @@
 			<h2 class="section__title section__title--white">Запись на обучение</h2>
 
 			<div class="form">
-				<form class="form__body" action="" >
+				<form class="form__body" action="" method="POST">
 
 					<input class="form__input" type="text" name="" id="" placeholder="Введите Ваше имя">
 					<input class="form__input" type="tel" name="" id="" placeholder="+7 900 000 00 00">
